# test-github-ci

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ---ci copy.yaml  ci.yaml  release-new.yml  release.yaml  release.yml
docs/: update.md  work.md
src/capgemmini/: __init__.py  horizon_data_retrieve_pipeline_test.py  multi_data_retrieve_pipeline_test.py  my_module.py  plannet_data_retrieve_pipeline_test.py  sauron_data_retrieve_pipeline_test.py
tests/: test_my_module.py
